--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -56,6 +56,7 @@ requires:
   File::ShareDir: 1.00
   File::Spec: 0
   IO::Socket::Multicast: 0
+  Math::Trig: 0
   Moose: 0
   MooseX::Event: 0
   Term::ReadLine::Perl5: 0
