Add TODO notes about some Build.PL things that weren't ported into dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -12,3 +12,18 @@ copyright_holder = Timm Murray
 [Prereqs]
 -phase = test
 Test::Pod = 0
+
+
+; TODO from old Build.PL
+;recommends => {
+;    'Getopt::Long'              => 0,
+;    'UAV::Pilot::SDL'           => 0,
+;    'UAV::Pilot::Video::Ffmpeg' => 0,
+;},
+;share_dir => 'share',
+;
+;meta_merge => {
+;    resources => {
+;        repository => 'https://github.com/frezik/UAV-Pilot',
+;    },
+;},
