Cleanup prereqs.  Setup CHANGELOG for 0.11 release.  Have Dist::Zilla create manifest.

--- a/dist.ini
+++ b/dist.ini
@@ -5,11 +5,28 @@ license = BSD
 copyright_holder = Timm Murray
 
 [GatherDir]
+[Manifest]
 [MakeMaker]
 
-[AutoPrereqs]
-
 [Prereqs]
+namespace::autoclean    = 0
+AnyEvent                = 0
+AnyEvent::ReadLine::Gnu = 0
+DateTime                = 0
+File::HomeDir           = 0
+File::ShareDir          = 0
+File::Spec              = 0
+File::Temp              = 0
+IO::Socket::Multicast   = 0
+Log::Log4perl           = 0
+Math::Trig              = 0
+Moose                   = 0
+MooseX::Event           = 0
+String::CRC32           = 0
+Test::More              = 0
+Throwable               = 0
+YAML                    = 0
+
 -phase = test
 Test::Pod = 0
 
