Have Dist::Zilla handle the share dir

--- a/dist.ini
+++ b/dist.ini
@@ -5,6 +5,7 @@ license = BSD
 copyright_holder = Timm Murray
 
 [GatherDir]
+[ShareDir]
 [Manifest]
 [MakeMaker]
 
@@ -37,7 +38,6 @@ Test::Pod = 0
 ;    'UAV::Pilot::SDL'           => 0,
 ;    'UAV::Pilot::Video::Ffmpeg' => 0,
 ;},
-;share_dir => 'share',
 ;
 ;meta_merge => {
 ;    resources => {
