Specify prereques more completely

--- a/dist.ini
+++ b/dist.ini
@@ -28,17 +28,16 @@ Test::More              = 0
 Throwable               = 0
 YAML                    = 0
 
--phase = test
+[Prereqs / RuntimeRecommends]
+Getopt::Long              = 0
+UAV::Pilot::SDL           = 0
+UAV::Pilot::Video::Ffmpeg = 0
+
+[Prereqs / TestRequires]
 Test::Pod = 0
 
 
 ; TODO from old Build.PL
-;recommends => {
-;    'Getopt::Long'              => 0,
-;    'UAV::Pilot::SDL'           => 0,
-;    'UAV::Pilot::Video::Ffmpeg' => 0,
-;},
-;
 ;meta_merge => {
 ;    resources => {
 ;        repository => 'https://github.com/frezik/UAV-Pilot',
