Specify meta resources

--- a/dist.ini
+++ b/dist.ini
@@ -36,10 +36,7 @@ UAV::Pilot::Video::Ffmpeg = 0
 [Prereqs / TestRequires]
 Test::Pod = 0
 
-
-; TODO from old Build.PL
-;meta_merge => {
-;    resources => {
-;        repository => 'https://github.com/frezik/UAV-Pilot',
-;    },
-;},
+[MetaResources]
+homepage        = http://www.wumpus-cave.net
+repository.web  = https://github.com/frezik/UAV-Pilot
+repository.type = git
