--- a/dist.ini
+++ b/dist.ini
@@ -40,3 +40,7 @@ Test::Pod = 0
 homepage        = http://www.wumpus-cave.net
 repository.web  = https://github.com/frezik/UAV-Pilot
 repository.type = git
+
+[TestRelease]
+[ConfirmRelease]
+[UploadToCPAN]
