--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name = UAV-Pilot
-version = 0.11
+version = 1.0_0
 author = Timm Murray <tmurray@wumpus-cave.net>
 license = BSD
 copyright_holder = Timm Murray
