Fix version numbering problems.  Bump copyright date.

--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,10 @@
 name = UAV-Pilot
-version = 1.0
 author = Timm Murray <tmurray@wumpus-cave.net>
 license = BSD
 copyright_holder = Timm Murray
+
+version = 1.1
+[PkgVersion]
 
 [GatherDir]
 [Manifest]
@@ -39,6 +41,8 @@ Test::Pod = 0
 homepage        = http://www.wumpus-cave.net
 repository.web  = https://github.com/frezik/UAV-Pilot
 repository.type = git
+
+[MetaJSON]
 
 [TestRelease]
 [ConfirmRelease]
