--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ author = Timm Murray <tmurray@wumpus-cave.net>
 license = BSD
 copyright_holder = Timm Murray
 
-version = 1.1
+version = 1.2
 [PkgVersion]
 
 [GatherDir]
@@ -41,6 +41,9 @@ Test::Pod = 0
 homepage        = http://www.wumpus-cave.net
 repository.web  = https://github.com/frezik/UAV-Pilot
 repository.type = git
+
+[ExecDir]
+dir = bin
 
 [MetaJSON]
 
