Add minimum perl version for kwalitee

--- a/dist.ini
+++ b/dist.ini
@@ -28,6 +28,7 @@ String::CRC32           = 0
 Test::More              = 0
 Throwable               = 0
 YAML                    = 0
+perl                    = 5.014
 
 [Prereqs / RuntimeRecommends]
 Getopt::Long              = 0
